<resources>
    <string name="app_name">PushNotificationFCM</string>
    <string name="msg">After succesfull registration, \n you will get <b>Notification</b> in this Device.</string>
    <string name="ADMOB_ID">ca-app-pub-9463442329397045~9260665128</string>
    <string name="ADMOB_TEST_ID">ca-app-pub-3940256099942544/6300978111</string>

    <string name="Interstitial_ad_ID">ca-app-pub-3940256099942544/1033173712</string>

    <string name="Rewarded_video_ID">ca-app-pub-3940256099942544/5224354917</string>

    <string name="test_device_id">C04B1BFFB0774708339BC273F8A43708</string>

    <!--PushNotificationFCM
Android
App ID: ca-app-pub-9463442329397045~9260665128-->

    <string name="text_sign_up">SignUp</string>
    <string name="text_user_name">Username</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_ad_view">Ad View Banner</string>
    <string name="text_interstitial_ad">Interstitial Advertise</string>
    <string name="text_rewarded_video">Rewarded Video Advertise</string>

</resources>
